--- a/src/org/cict/evaluation/assistant.fxml
+++ b/src/org/cict/evaluation/assistant.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -164,5 +165,6 @@
             <Font size="16.0" />
          </font>
       </JFXButton>
+      <JFXCheckBox fx:id="chkbx_disable_ai" checkedColor="#f44336" layoutX="39.0" layoutY="396.0" text="Don't show again" textFill="#00ade1" unCheckedColor="#00ade1" />
    </children>
 </AnchorPane>
