--- a/src/org/cict/evaluation/assistant2.fxml
+++ b/src/org/cict/evaluation/assistant2.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -61,5 +62,6 @@
             <Image url="@src/img/blue-fox.png" />
          </image>
       </ImageView>
+      <JFXCheckBox fx:id="chkbx_disable_ai" checkedColor="#f44336" layoutX="29.0" layoutY="401.0" text="Don't show again" textFill="#00ade1" unCheckedColor="#00ade1" />
    </children>
 </AnchorPane>
