--- a/src/update3/org/cict/access/AssistantRegistrarOverride.fxml
+++ b/src/update3/org/cict/access/AssistantRegistrarOverride.fxml
@@ -67,14 +67,14 @@
                   </Label>
                   <HBox alignment="CENTER" prefHeight="30.0" prefWidth="380.0" spacing="10.0">
                      <children>
-                        <JFXButton fx:id="btn_proceed" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #fff;" text="Proceed" textFill="WHITE">
+                        <JFXButton fx:id="btn_proceed" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #fff;" text="Proceed" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
-                              <Font size="16.0" />
+                              <Font size="15.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="btn_cancel" layoutX="10.0" layoutY="10.0" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #fff;" text="Cancel" textFill="WHITE">
+                        <JFXButton fx:id="btn_cancel" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #fff;" text="Cancel" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
-                              <Font size="16.0" />
+                              <Font size="15.0" />
                            </font>
                         </JFXButton>
                      </children>
