--- a/src/update4/org/cict/linked_manager/LinkedHome.fxml
+++ b/src/update4/org/cict/linked_manager/LinkedHome.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -133,7 +134,7 @@
             </VBox>
             <StackPane HBox.hgrow="ALWAYS">
                <children>
-                  <VBox fx:id="vbox_home" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_home" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -212,7 +213,7 @@
                                           <Image url="@images/Connect%20Develop_96px_2.png" />
                                        </image>
                                     </ImageView>
-                                    <VBox alignment="CENTER" prefHeight="49.0" spacing="10.0">
+                                    <VBox alignment="CENTER" prefHeight="49.0" spacing="10.0" HBox.hgrow="ALWAYS">
                                        <children>
                                           <HBox spacing="10.0">
                                              <children>
@@ -226,7 +227,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="October 08, 2017">
+                                                <Label fx:id="lbl_session_started" text="October 08, 2017">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -236,7 +237,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="Jhon Melvin Nieto Perello">
+                                                <Label fx:id="lbl_started_by" text="Jhon Melvin Nieto Perello">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -250,12 +251,12 @@
                                                       <Image url="@images/service.png" />
                                                    </image>
                                                 </ImageView>
-                                                <Label text="SERVICE # 1">
+                                                <Label text="CLUSTER # 1">
                                                    <font>
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="3FLR/IT8">
+                                                <Label fx:id="lbl_cluster1" text="3FLR/IT8">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -265,7 +266,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="1000">
+                                                <Label fx:id="lbl_cluster1_max" text="1000">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -275,7 +276,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="25">
+                                                <Label fx:id="lbl_cluster1_served" text="25">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -289,12 +290,12 @@
                                                       <Image url="@images/service.png" />
                                                    </image>
                                                 </ImageView>
-                                                <Label text="SERVICE # 2">
+                                                <Label text="CLUSTER # 2">
                                                    <font>
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="3FLR/IT8">
+                                                <Label fx:id="lbl_cluster2" text="3FLR/IT8">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -304,7 +305,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="1000">
+                                                <Label fx:id="lbl_cluster2_max" text="1000">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -314,7 +315,7 @@
                                                       <Font name="System Bold" size="15.0" />
                                                    </font>
                                                 </Label>
-                                                <Label text="25">
+                                                <Label fx:id="lbl_cluster2_served" text="25">
                                                    <font>
                                                       <Font size="15.0" />
                                                    </font>
@@ -352,17 +353,15 @@
                         </VBox>
                         <HBox alignment="CENTER" prefWidth="200.0" spacing="10.0">
                            <children>
-                              <JFXButton graphicTextGap="10.0" prefWidth="320.0" style="-fx-border-color: white; -fx-background-color: #F592A7;" text="Stop Services" textFill="WHITE">
+                              <JFXButton fx:id="btn_pause_1" graphicTextGap="10.0" prefHeight="35.0" prefWidth="320.0" style="-fx-border-color: white; -fx-background-color: #F592A7;" text="Pause Cluster 1" textFill="WHITE">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
-                                 <graphic>
-                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/Stop%20Sign_96px.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
+                              </JFXButton>
+                              <JFXButton fx:id="btn_pause_2" graphicTextGap="10.0" layoutX="297.0" layoutY="20.0" prefHeight="35.0" prefWidth="320.0" style="-fx-border-color: white; -fx-background-color: #F592A7;" text="Pause Cluster 2" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
                               </JFXButton>
                            </children>
                            <padding>
@@ -402,7 +401,24 @@
                                           <Insets />
                                        </HBox.margin>
                                     </ImageView>
-                                    <Label text="New Session Layout" wrapText="true">
+                                    <Label text="Creating new session will generate another queue process. If there is a last number of a student who receives a cut off, this action will make him/her the first number by creating a new queue and removing the previous serviced students." wrapText="true">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="40.0" layoutY="30.0" prefWidth="200.0" spacing="10.0">
+                                 <children>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/Next%20page_96px_1.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </ImageView>
+                                    <Label text="If two clusters needed to be created, you must do it right away. In this transaction if 1 cluster is only created, there is no way to update and create the second cluster within the same session. Alteration is prohibited." wrapText="true">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
@@ -413,6 +429,105 @@
                            <padding>
                               <Insets left="30.0" top="20.0" />
                            </padding>
+                           <VBox.margin>
+                              <Insets right="20.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <VBox alignment="CENTER">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="828.0">
+                                 <children>
+                                    <Label text="Cluster One (1)">
+                                       <font>
+                                          <Font name="System Bold" size="20.0" />
+                                       </font>
+                                    </Label>
+                                    <VBox spacing="5.0">
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                             <children>
+                                                <Label prefHeight="21.0" prefWidth="115.0" text="Cluster Name:">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </Label>
+                                                <TextField fx:id="txt_cluster1" prefHeight="25.0" prefWidth="279.0" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
+                                             <children>
+                                                <Label text="Maximum Count:">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </Label>
+                                                <TextField fx:id="txt_cluster1_max" disable="true" prefHeight="25.0" prefWidth="89.0" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="20.0" />
+                                       </VBox.margin>
+                                    </VBox>
+                                    <Label layoutX="10.0" layoutY="10.0" text="Cluster Two (2)">
+                                       <font>
+                                          <Font name="System Bold" size="20.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="15.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <VBox layoutX="30.0" layoutY="40.0" spacing="5.0">
+                                       <children>
+                                          <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                             <children>
+                                                <Label prefHeight="21.0" prefWidth="115.0" text="Cluster Name:">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </Label>
+                                                <TextField fx:id="txt_cluster2" disable="true" prefHeight="25.0" prefWidth="279.0" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
+                                             <children>
+                                                <Label text="Maximum Count:">
+                                                   <font>
+                                                      <Font size="15.0" />
+                                                   </font>
+                                                </Label>
+                                                <TextField fx:id="txt_cluster2_max" disable="true" prefHeight="25.0" prefWidth="89.0" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="20.0" />
+                                       </VBox.margin>
+                                    </VBox>
+                                    <JFXButton fx:id="btn_create_new_session" graphicTextGap="10.0" prefWidth="320.0" style="-fx-border-color: white; -fx-background-color: #40A000;" text="Create New Session" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/Connect%20Develop_96px_2.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <VBox.margin>
+                                          <Insets left="65.0" top="20.0" />
+                                       </VBox.margin>
+                                    </JFXButton>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets left="250.0" />
+                                 </VBox.margin>
+                              </VBox>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
                         </VBox>
                      </children>
                      <padding>
@@ -472,7 +587,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_announcements" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_announcements" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
