--- a/src/org/cict/evaluation/student/history/History.fxml
+++ b/src/org/cict/evaluation/student/history/History.fxml
@@ -74,11 +74,20 @@
             </JFXTreeTableView>
             <VBox alignment="CENTER_RIGHT" VBox.vgrow="ALWAYS">
                <children>
-                  <Button fx:id="btnBack" mnemonicParsing="false" prefHeight="36.0" prefWidth="126.0" stylesheets="@src/css/button.css" text="Close" textFill="WHITE">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
+                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                     <children>
+                        <Button fx:id="btn_print" mnemonicParsing="false" prefHeight="36.0" prefWidth="126.0" stylesheets="@src/css/button.css" text="Print History" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btnBack" mnemonicParsing="false" prefHeight="36.0" prefWidth="126.0" stylesheets="@src/css/button.css" text="Close" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" right="10.0" />
