--- a/src/org/cict/evaluation/missing-info.fxml
+++ b/src/org/cict/evaluation/missing-info.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -10,15 +9,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="460.0" style="-fx-background-color: #46CDAC;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="460.0" style="-fx-background-color: #46CDAC;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER">
          <children>
-            <Label text="Welcome!" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="41.0" />
-               </font>
-            </Label>
             <VBox alignment="CENTER">
                <children>
                   <Label text="New Student Wizard" textFill="WHITE">
@@ -28,12 +22,28 @@
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" />
-                     </padding>
                   </Label>
                </children>
             </VBox>
+            <Label text="Welcome!" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="41.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Label text="Type" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txt_type" editable="false" prefHeight="9.0" prefWidth="195.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <VBox alignment="CENTER" spacing="5.0">
@@ -90,18 +100,13 @@
                   </VBox>
                </children>
             </HBox>
-            <JFXCheckBox fx:id="chk_cross" checkedColor="WHITE" text="Cross-Erollee" textFill="WHITE" unCheckedColor="WHITE">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-               <padding>
-                  <Insets left="2.0" />
-               </padding>
-            </JFXCheckBox>
             <JFXButton fx:id="btn_proceed" minWidth="40.0" prefHeight="40.0" prefWidth="242.0" style="-fx-border-color: white;" text="Continue" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
             </JFXButton>
          </children>
       </VBox>
