--- a/src/update2/org/cict/layout/subjects/subject-bank.fxml
+++ b/src/update2/org/cict/layout/subjects/subject-bank.fxml
@@ -64,9 +64,9 @@
          </stylesheets></VBox>
       <HBox fx:id="hbox_searching" alignment="CENTER" layoutX="11.0" layoutY="250.0" prefHeight="150.0" prefWidth="1165.0" visible="false" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="9.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="67.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../res/gif/initloading.gif" />
+                  <Image url="@../../../../../update3/org/cict/window_prompts/default_loader/default_loader128.gif" />
                </image>
                <HBox.margin>
                   <Insets right="20.0" />
