--- a/src/org/cict/accountmanager/faculty/layout/faculty-info.fxml
+++ b/src/org/cict/accountmanager/faculty/layout/faculty-info.fxml
@@ -123,26 +123,26 @@
                         </HBox>
                         <HBox spacing="10.0">
                            <children>
-                              <Label minWidth="-Infinity" prefHeight="21.0" prefWidth="112.0" text="DESIGNATION">
-                                 <font>
-                                    <Font name="System Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="lbl_designation" text="Instructor" wrapText="true">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <HBox spacing="10.0">
-                           <children>
                               <Label minWidth="-Infinity" prefHeight="21.0" prefWidth="112.0" text="DEPARTMENT">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
                               <Label fx:id="lbl_department" text="IT" wrapText="true">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox spacing="10.0" visible="false">
+                           <children>
+                              <Label minWidth="-Infinity" prefHeight="21.0" prefWidth="112.0" text="DESIGNATION">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lbl_designation" text="Instructor" wrapText="true">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
@@ -356,16 +356,6 @@
                         <ComboBox fx:id="cmb_rank" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="175.0" prefHeight="33.0" prefWidth="320.0" spacing="10.0">
-                     <children>
-                        <Label prefWidth="100.0" text="Designation" textFill="#656d79">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <ComboBox fx:id="cmb_des" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
-                     </children>
-                  </HBox>
                   <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="238.0" prefHeight="33.0" prefWidth="320.0" spacing="10.0">
                      <children>
                         <Label prefWidth="100.0" text="Department" textFill="#656d79">
@@ -392,6 +382,16 @@
                         </JFXButton>
                      </children>
                   </VBox>
+                  <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="175.0" prefHeight="33.0" prefWidth="320.0" spacing="10.0" visible="false">
+                     <children>
+                        <Label prefWidth="100.0" text="Designation" textFill="#656d79">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cmb_des" prefHeight="25.0" prefWidth="275.0" styleClass="metro-combo-box" />
+                     </children>
+                  </HBox>
                </children>
                <padding>
                   <Insets left="40.0" />
