added thread for evalutaion queue

--- a/src/org/cict/evaluation/evaluation_home.fxml
+++ b/src/org/cict/evaluation/evaluation_home.fxml
@@ -375,12 +375,31 @@
       </AnchorPane>
       <AnchorPane fx:id="anchor_main1" layoutX="10.0" layoutY="77.0" prefHeight="633.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="67.0">
          <children>
-            <VBox fx:id="vbox_list" layoutX="65.0" layoutY="7.0" prefHeight="623.0" prefWidth="290.0" spacing="3.0" style="-fx-background-color: #24344B;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0" />
-            <Label layoutX="45.0" layoutY="14.0" text="Student Queue" textFill="#285594" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="10.0">
+            <StackPane layoutY="40.0" prefHeight="550.0" prefWidth="295.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="40.0">
+               <children>
+                  <VBox fx:id="vbox_list" prefHeight="623.0" prefWidth="290.0" spacing="3.0" />
+                  <VBox fx:id="vbox_waiting_queue" alignment="BOTTOM_LEFT" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label text="Waiting..." textFill="#37474f">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                        </Label>
+                        <Line endX="100.0" startX="-100.0" />
+                     </children>
+                     <StackPane.margin>
+                        <Insets bottom="10.0" left="10.0" top="10.0" />
+                     </StackPane.margin>
+                  </VBox>
+               </children>
+            </StackPane>
+            <Label layoutX="45.0" layoutY="14.0" text="Student Queue" textFill="#37474f" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0">
                <font>
-                  <Font name="System Bold" size="19.0" />
+                  <Font size="19.0" />
                </font>
             </Label>
+            <Label layoutX="8.0" layoutY="602.0" text="Total Enrollee On Queue:" />
+            <Label fx:id="lbl_total_queue" layoutX="144.0" layoutY="602.0" text="10" />
          </children>
       </AnchorPane>
    </children>
